--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -15,22 +15,42 @@
         <div class="tabs is-centered is-boxed">
             <ul>
                 {# Travel tab #}
-                <li class="is-active">
+                <li class="is-active" onclick="openTab(event, 'travel')">
                     <a class="tab-link">Travel</a>
                 </li>
                 {# Home utilties tab #}
-                <li class="is-active">
+                <li class="is-active" onclick="openTab(event, 'home')">
                     <a class="tab-link">Home utilities</a>
                 </li>
                 {# Food shopping #}
-                <li class="is-active">
+                <li class="is-active" onclick="openTab(event, 'home')">
                     <a class="tab-link">Food shopping</a>
                 </li>
                 {# Other expenses e.g. goods, services #}
-                <li class="is-active">
+                <li class="is-active" onclick="openTab(event, 'home')">
                     <a class="tab-link">Other expenses</a>
                 </li>
             </ul>
         </div>
+    </div>
+
+    <div class="container content-container">
+        {# Tab content which will show when the travel tab is open #}
+        <div id="travel" class="content-tab active">
+            Travel
+        </div>
+        {# Tab content which will show when the travel tab is open #}
+        <div id="home" class="content-tab inactive">
+            Home
+        </div>
+        {# Tab content which will show when the travel tab is open #}
+        <div id="food" class="content-tab inactive">
+            Food
+        </div>
+        {# Tab content which will show when the travel tab is open #}
+        <div id="other" class="content-tab inactive">
+            Other
+        </div>
+
     </div>
 {% endblock %}
