Modified donate_blueprint in donate.views.py and created a function called 'donate' that renders the donate.html template. Modified base.html and added the url link for the 'donate' nav bar item in order to correctly direct to the 'donate.views' python file. Fixed misspelled comment in feed.py.

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                         <a href="{{ url_for('feed.feed') }}" class="navbar-item">
                             Feed
                         </a>
-                        <a class="navbar-item">
+                        <a ref="{{ url_for('donate.donate') }}" class="navbar-item">
                             Donate
                         </a>
                         <a class="navbar-item">
