--- a/templates/feed.html
+++ b/templates/feed.html
@@ -2,6 +2,34 @@
 
 {% block content %}
 
-  <h1 class="title">Feed</h1>
+    <div class="column is-6 is-offset-3">
+        <h1 class="title is-1">Posts</h1>
+        <div class="box">
+            {% for post in posts %}
+                <article class="media">
+                    <div class="media-content">
+                        <div class="content">
+                            <h1>{{ post.title }}</h1>
+                            <p>
+                                <strong>{{ post.username }}</strong>
+                                <small>{{ post.created.strftime('%d-%m-%Y') }}</small>
+                                <br>
+                                {{ post.body }}
+                                <br>
+                            {% if post.username == current_user.username %}
+                            <div id="navbarMenuHeroA" class="navbar-menu">
+                                <div class="navbar-start">
+                                    <a class="navbar-item" href="{{ url_for('feed.update', id=post.id) }}">Update</a>
+                                    <a class="navbar-item" href="{{ url_for('feed.delete', id=post.id) }}">Delete</a>
+                                </div>
+                            </div>
+                            {% endif %}
+                            </p>
+                        </div>
+                    </div>
+                </article>
+            {% endfor %}
+        </div>
+    </div>
 
 {% endblock %}
