--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -1,7 +1,120 @@
 {% extends "base.html" %}
 
+{% block head %}
+    {{ super() }}
+
+    <link rel="stylesheet" href="/static/calculator.css" />
+    <script type="text/javascript" src="/static/calculator.js"></script>
+
+{% endblock %}
+
 {% block content %}
 
-  <h1 class="title">Calculator</h1>
+      <div class="form-container container has-text-centered">
+
+        <div class="tab-container container">
+            <div class="tabs is-centered is-boxed">
+                <ul id="ul-tab-container">
+                    <li class="is-active" onclick="openTab(event, 'travel')">
+                        <a class="tab-link">Travel</a>
+                    </li>
+                    <li onclick="openTab(event, 'home')">
+                        <a class="tab-link">Home utilities</a>
+                    </li>
+                    <li onclick="openTab(event, 'food')">
+                        <a class="tab-link">Food shopping</a>
+                    </li>
+                    <li onclick="openTab(event, 'other')">
+                        <a class="tab-link">Other expenses</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="container content-container">
+            {{ form.csrf_token() }}
+            <div id="travel" class="content-tab active">
+                <p>How much money did you spend on..?</p>
+                <div class="input-container">
+                    <p class="query">1. Vehicle fuel</p>
+                    <p class="input-field">{{ form.vehicle_fuel(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">1.1. Vehicle type</p>
+                    <p class="input-field">{{ form.vehicle_type(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">1.2. Maintenance of your vehicle</p>
+                    <p class="input-field">{{ form.vehicle_upkeep(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">2. Public transport</p>
+                    <p class="input-field">{{ form.public_transport(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">3. Air travel</p>
+                    <p class="input-field">{{ form.air_travel(class="input") }}</p>
+                </div>
+            </div>
+            <div id="home" class="content-tab inactive">
+                <p>How much money did you spend on..?</p>
+                <div class="input-container">
+                    <p class="query">1. Electricity</p>
+                    <p class="input-field">{{ form.electricity(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">1.1. How much of that was from clean sources?</p>
+                    <p class="input-field">{{ form.clean_electricity_factor(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">2. Natural gases</p>
+                    <p class="input-field">{{ form.gas(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">3. Kerosene heating oil</p>
+                    <p class="input-field">{{ form.heating_oil(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">4. Water</p>
+                    <p class="input-field">{{ form.water(class="input") }}</p>
+                </div>
+            </div>
+            <div id="food" class="content-tab inactive">
+                <p>How much money did you spend on..?</p>
+                <div class="input-container">
+                    <p class="query">1. Meat</p>
+                    <p class="input-field">{{ form.meat(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">2. Fruit and vegetables</p>
+                    <p class="input-field">{{ form.fruit_vegetables(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">3. Dairy products</p>
+                    <p class="input-field">{{ form.dairy(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">4. Grains/baked goods</p>
+                    <p class="input-field">{{ form.grains(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">5. Snacks/drinks</p>
+                    <p class="input-field">{{ form.snacks(class="input") }}</p>
+                </div>
+            </div>
+            <div id="other" class="content-tab inactive">
+                <p>How much money did you spend on..?</p>
+                <div class="input-container">
+                    <p class="query">1. Goods</p>
+                    <p class="input-field">{{ form.goods(class="input") }}</p>
+                </div>
+                <div class="input-container">
+                    <p class="query">2. Services</p>
+                    <p class="input-field">{{ form.services(class="input") }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
