--- a/templates/posts.html
+++ b/templates/posts.html
@@ -11,7 +11,6 @@
                         <div class="content">
                             <h1>{{ post.title }}</h1>
                             <p>
-                                <strong>{{ post.username }}</strong>
                                 <small>{{ post.created.strftime('%d-%m-%Y') }}</small>
                                 <br>
                                 {{ post.body }}
@@ -19,8 +18,8 @@
                             {% if post.username == current_user.username %}
                             <div id="navbarMenuHeroA" class="navbar-menu">
                                 <div class="navbar-start">
-                                    <a class="navbar-item" href="{{ url_for('feed.update', id=post.id) }}">Update</a>
-                                    <a class="navbar-item" href="{{ url_for('feed.delete', id=post.id) }}">Delete</a>
+                                    <a class="navbar-item" href="{{ url_for('posts.update', id=post.id) }}">Update</a>
+                                    <a class="navbar-item" href="{{ url_for('posts.delete', id=post.id) }}">Delete</a>
                                 </div>
                             </div>
                             {% endif %}
