Update text on feed tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,13 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Users
+                            Feed
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for("challenges.create") }}">Profile</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for("challenges.challenges") }}">Register</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for("posts.create") }}">Login</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for("posts.posts") }}">Logout</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("challenges.create") }}">New Challenge</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("challenges.challenges") }}">Challenges</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("posts.create") }}">New Post</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for("posts.posts") }}">Posts</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
