--- a/templates/base.html
+++ b/templates/base.html
@@ -27,14 +27,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href={{ url_for('index') }}>Home</a>
                     </li>
+                    {% if current_user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Feed
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% if current_user.role == "admin" %}
                             <li><a class="dropdown-item" href="{{ url_for("challenges.create") }}">New Challenge</a></li>
+                            {% endif %}
                             <li><a class="dropdown-item" href="{{ url_for("challenges.challenges") }}">Challenges</a></li>
+                            {% if current_user.role == "admin" %}
                             <li><a class="dropdown-item" href="{{ url_for("posts.create") }}">New Post</a></li>
+                            {% endif %}
                             <li><a class="dropdown-item" href="{{ url_for("posts.posts") }}">Posts</a></li>
                         </ul>
                     </li>
@@ -47,21 +52,30 @@
                     <li class="nav-item">
                         <a class="nav-link" href={{ url_for('calculator.calculator') }}>Carbon Calculator</a>
                     </li>
+                    {% if current_user.role == "admin" %}
                     <li class="nav-item">
                         <a class="nav-link" href={{ url_for('admin.admin') }}>Admin</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="">Contact us</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Users
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% if current_user.is_authenticated %}
                             <li><a class="dropdown-item" href={{ url_for("users.profile") }}>Profile</a></li>
+                            {% endif %}
+                            {% if not current_user.is_authenticated %}
                             <li><a class="dropdown-item" href={{ url_for("users.register") }}>Register</a></li>
-                            <li><a class="dropdown-item" href={{ url_for("users.login") }}>Login</a></li>
+                            <li><a class="dropdown-item" href={{ url_for("users.login") }}>Log in</a></li>
+                            {% endif %}
+                            {% if current_user.is_authenticated %}
                             <li><a class="dropdown-item" href={{ url_for("users.logout") }}>Logout</a></li>
+                            {% endif %}
                         </ul>
                     </li>
                 </ul>
