--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,108 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <script type="text/javascript" src="{{ url_for('static', filename='rng.js') }}"></script>
+    <h3 class="title is-3">Greenify Admin
+    </h3>
+    <h4 class="subtitle is-4">
+        Welcome, {{ name }}
+    </h4>
 
-  <h1 class="title">Admin</h1>
+    <div class="column is-10 is-offset-1">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="notification is-danger">
+                    {{ messages[0] }}
+                </div>
+            {% endif %}
+        {% endwith %}
+
+
+        <h4 class="title is-4">Registered Users</h4>
+        <div class="box">
+            {% if current_users %}
+                <div class="field">
+                    <table class="table">
+                        <tr>
+                            <th>ID</th>
+                            <th>Email</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Phone Number</th>
+                            <th>Role</th>
+                        </tr>
+                        {% for user in current_users %}
+                            <tr>
+                                <td>{{ user.id }}</td>
+                                <td>{{ user.email }}</td>
+                                <td>{{ user.firstname }}</td>
+                                <td>{{ user.lastname }}</td>
+                                <td>{{ user.phone }}</td>
+                                <td>{{ user.role }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
+            <form method="POST" action="/view_all_users">
+                <div>
+                    <button class="button is-info is-centered">View All Users</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="column is-6 is-offset-3">
+        <h3 class="title is-3">Create Challenge</h3>
+        <div class="box">
+            <form method="POST">
+                <div class="field">
+                    {{ form.csrf_token() }}
+                    <div class="control">
+                        {{ form.title(class="input", placeholder="Title") }}
+                        {% for error in form.title.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        {{ form.body(class="textarea", placeholder="Body") }}
+                        {% for error in form.body.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <div>
+                    {{ form.submit(class="button is-info is-centered") }}
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="column is-8 is-offset-2" id="test">
+        <h4 class="title is-4">Security Logs</h4>
+        <div class="box">
+            {% if logs %}
+                <div class="field">
+                <table class="table">
+                    <tr>
+                        <th>Last 10 Security Log Entries</th>
+                    </tr>
+                    {% for entry in logs %}
+                        <tr>
+                            <td>{{ entry }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% endif %}
+            <form method="POST" action="/logs">
+                <div>
+                    <button class="button is-info is-centered">View Logs</button>
+                </div>
+            </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
