--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                             Users
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            {% if current_user.is_authenticated %}
+                            {% if current_user.is_authenticated and current_user.role=='user'%}
                             <li><a class="dropdown-item" href={{ url_for("users.profile") }}>Profile</a></li>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
