--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,17 @@
     {% endblock %}
 </head>
 
+<style>
+    .navbar {
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+    .navbar-nav li a:hover {
+      color: #1abc9c !important;
+    }
+</style>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
