--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -16,13 +16,16 @@
                                 {{ challenge.body }}
                                 <br>
                             {% if challenge.username == current_user.username %}
-                            <div id="navbarMenuHeroA" class="navbar-menu">
-                                <div class="navbar-start">
-                                    <a class="navbar-item" href="{{ url_for('challenges.update', id=challenge.id) }}">Update</a>
-                                    <a class="navbar-item" href="{{ url_for('challenges.delete', id=challenge.id) }}">Delete</a>
-                                </div>
+                            <div class="btn-group btn-group-justified">
+                              <div class="btn-group">
+                                <button type="button" class="btn btn-primary" href="{{ url_for('challenges.update', id=challenge.id) }}">Update</button>
+                              </div>
+                              <div class="btn-group">
+                                <button type="button" class="btn btn-danger" href="{{ url_for('challenges.delete', id=challenge.id) }}">Delete</button>
+                              </div>
                             </div>
                             {% endif %}
+                            <button class="button is-info is-centered btn btn-success btn-block">Join Challenge</button>
                             </p>
                         </div>
                     </div>
