Set up formatting for the login and register pages using Bootstrap

--- a/static/base.css
+++ b/static/base.css
@@ -2,9 +2,8 @@
     /* Set up colour schemes */
     --navbar-bg-colour: #96ff94;
     --body-background-colour: #cbfcca;
-    --text-colour-navbar: #3a3a3a;
-    --text-colour-body: #3a3a3a;
-
+    --navbar-text-colour: #3a3a3a;
+    --body-text-colour: #3a3a3a;
 }
 
 nav.bg-color-navbar {
@@ -12,26 +11,26 @@ nav.bg-color-navbar {
 }
 
 nav.bg-color-navbar .navbar-brand {
-    color: var(--text-colour-navbar);
+    color: var(--navbar-text-colour);
     font-weight: bolder;
 }
 
 nav.bg-color-navbar .nav-link {
     justify-self: right;
-    color: var(--text-colour-navbar);
+    color: var(--navbar-text-colour);
 }
 
 button.navbar-toggler i {
-    color: var(--text-colour-navbar);
+    color: var(--navbar-text-colour);
 }
 
 div.body-container {
+    /* Set up container to contain 100% of the page outside of the navbar */
     position: absolute;
-    width: 100%;
-    height: 100%;
+    height: calc(100% - 56px);
+    width:100%;
     background-color: var(--body-background-colour);
-    color: var(--text-colour-body);
-
+    color: var(--body-text-colour);
 
     /* Center all elements in the body */
     display: flex;
@@ -39,4 +38,9 @@ div.body-container {
     justify-items: center;
     text-align: center;
     text-justify: inter-word;
+}
+
+/* Set up input for login forms */
+form div.field {
+    padding: 5px 25%;
 }
