--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                     <div class="field">
                         {{ form.csrf_token() }}
                         <div class="control">
-                            {{ form.email(class="input", placeholder="Email") }}
+                            {{ form.email(class="form-control", placeholder="Email") }}
                             {% for error in form.email.errors %}
                                 {{ error }}
                             {% endfor %}
@@ -24,14 +24,14 @@
                     </div>
                     <div class="field">
                         <div class="control">
-                            {{ form.password(class="input", placeholder="Password") }}
+                            {{ form.password(class="form-control", placeholder="Password") }}
                             {% for error in form.password.errors %}
                                 {{ error }}
                             {% endfor %}
                         </div>
                     </div>
                     <div>
-                        {{ form.submit(class="button is-info is-centered") }}
+                        {{ form.submit(class="btn btn-lg btn-primary") }}
                     </div>
                 </form>
             {% endif %}
